--- a/package.json
+++ b/package.json
@@ -18,17 +18,22 @@
     "@paypal/react-paypal-js": "^8.8.3",
     "@prisma/adapter-neon": "^6.10.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@types/ws": "^8.18.1",
+    "@uploadthing/react": "^7.3.2",
     "bcrypt-ts-edge": "^3.0.1",
     "bufferutil": "^4.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "D": "^1.0.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.518.0",
     "next": "15.3.4",
     "next-auth": "^5.0.0-beta.29",
@@ -38,9 +43,12 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
     "recharts": "^3.0.2",
+    "slugify": "^1.6.6",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.7.3",
+    "vaul": "^1.1.2",
     "ws": "^8.18.2",
     "zod": "^3.25.67"
   },
@@ -56,7 +64,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "jest": "^30.0.4",
-    "prisma": "^6.10.1",
+    "prisma": "^6.11.1",
     "tailwindcss": "^4",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
