--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.4.0",
     "@types/ws": "^8.18.1",
     "@uploadthing/react": "^7.3.2",
     "bcrypt-ts-edge": "^3.0.1",
@@ -45,6 +47,7 @@
     "recharts": "^3.0.2",
     "slugify": "^1.6.6",
     "sonner": "^2.0.5",
+    "stripe": "^18.3.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.7.3",
