--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "postinstall": "prisma generate",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "email": "email dev --dir email --port 3001"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -25,6 +26,7 @@
     "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-email/components": "^0.1.1",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.4.0",
     "@types/ws": "^8.18.1",
@@ -43,8 +45,10 @@
     "query-string": "^9.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^4.0.17",
     "react-hook-form": "^7.59.0",
     "recharts": "^3.0.2",
+    "resend": "^4.6.0",
     "slugify": "^1.6.6",
     "sonner": "^2.0.5",
     "stripe": "^18.3.0",
